objects/Live_Agent_Status_Log__c.object
<CustomObject>
    <fields>
        <fullName>Hour_of_the_day_As_Per_GMT__c</fullName>
        <formula>MID (Status_Change_Time_1__c , 12, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour of the day(As Per GMT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour_of_the_day_As_Per_Local__c</fullName>
        <formula>VALUE(MID (TEXT (CreatedDate - 0.1667), 12, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour of the day(As Per Local)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Change_Time_1__c</fullName>
        <formula>SUBSTITUTE(TEXT(CreatedDate), &apos;Z&apos;, &apos;.&apos; + MID(TEXT(MOD(MOD(CreatedDate - $System.OriginDateTime, 1), 86400)), 3, 3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Change Time 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Time__c</fullName>
        <formula>(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Away</fullName>
                    <color>#FFCC33</color>
                    <label>Away</label>
                </value>
                <value>
                    <fullName>Offline</fullName>
                    <color>#AFCADF</color>
                    <label>Offline</label>
                </value>
                <value>
                    <fullName>Online</fullName>
                    <color>#009900</color>
                    <label>Online</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Live Agent Status Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Hour_of_the_day_As_Per_Local__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status_Change_Time_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Live Agent Status Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Agent Status Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>